assets/css/styles.css
/* ... */
/* MOBILE STYLING - START */
/* ==========================================*/
@media only screen and (min-width: 700px)  {
   
   .form-container {
      width: 700px;
   }
   header {
      position: relative;
      top: -19px;
      left: -18px;
      width: 700px;
   }

   .error2-select-text-wrapper {
      left: 40%;
   }
   .cut-list-item {
      width: 100%;
   }
   #cuts-list>li:before {
      padding-right: 0px;
      margin-right: 144px;
   }
   .error2-ft-icon-wrapper {
      left: 55%;
   }
   .error2-inch-icon-wrapper {
      left: 84%;
   }
   #input-price-wrapper {
      margin-right: 16px;
   }
   #sell-price-input {
      width: 159.35px;
   }
   .error-price-icon-wrapper {
      left: 35%;
   }
   .error-price-text-wrapper {
      left: 4%;
   }

   /* FORM1 RESPONSIVE STYLING */
   /* ========================================== */
   .fist-error-icon {
      left: 91%;
   }
   .error-icon-wrapper {
      left: 91.5%;
   }
   .error-text-wrapper {
      left: 75%;
   }
   /* MENU POPUP STYLING */
   /* ========================================= */
   #menu-display {
      width: 690px;
      height: 80vh;
      padding: 20px;
      z-index: 10;
   }
   .feedback-form-submit-btn {
      width: 80%;
   }
   /*  CALC ROLL QTY OUTPUT STYLING */
   /* ============================================ */
   #output-roll-size {
      flex-direction: column;
   }
   .cut-lf-output {
      font-size: 0.8rem;
      margin-right: 82px;
   }
   /* CULL TOOL TIP */
   /* ========================================= */
   .cull-tool-tip .cull-tool-tip-txt {
      visibility: hidden;
      width: 120%;
      background-color: #333;
      color: #fff;
      text-align: center;
      padding: 5px;
      border-radius: 6px;
      top: -45px;
      left: 265px;
      /* Position the tooltip text */
      position: absolute;
      z-index: 1;
    }
    .cull-tool-tip .cull-tool-tip-txt::before {
      content: " ";
      border-top: 12px solid transparent;
      border-right: 12px solid #333;
      border-bottom: 12px solid transparent;
      top: 47px;
      left: -42px;
      width: 20px;
      height: 0px;
    }
}

/* Print Section Styling */
.print-section {
   width: 100%;
    margin-top: 20px;
    text-align: center;
}

.print-btn, .print-confirm-btn {
    /* background-color: #0f68bc; */
    background-color: #4187ca;
    color: white;
    width: 40%;
    height: 45px;
    padding: 10px 15px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 15px;
    font-weight: 600;
}

.print-btn:hover, .print-confirm-btn:hover {
    background-color: #0d5aa3;
}

#sku-input-section {
    margin: 15px 0;
}

#sku-input-section input {
   width: 135px;
   height: 45px;
    padding: 6px;
    /* border: 1px solid #ccc; */
    border-radius: 4px;
    text-align: center;
    font-size: 16px;
    font-weight: 600;
    color: #333;
}

#sku-input-section-cuts input {
   width: 135px;
   height: 45px;
    padding: 6px;
    /* border: 1px solid #ccc; */
    border-radius: 4px;
    text-align: center;
    font-size: 16px;
    font-weight: 600;
    color: #333;
}

